--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ __pycache__/class_support.cpython-36.pyc
 __pycache__/class_player.cpython-36.pyc
 __pycache__/class_monster.cpython-36.pyc
 __pycache__/class_graphics.cpython-36.pyc
+.vscode/settings.json
